feat: updating validation service

--- a/frontShortLink/index.html
+++ b/frontShortLink/index.html
@@ -13,8 +13,9 @@
                 <input type="text" name="link" id="linkId" />
                 <button class="bg-blue btn" type="submit">Criar</button>
             </form>
-            <article>
-                <div class="txt-center">link</div>
+            <article class="txt-center hidden">
+                <h3>Seu link vai durar 5 minutos</h3>
+                <h1>link</h1>
             </article>
         </main>
     </body>
